fix: fix grouping ids bug and fix ast semantic type validator